<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.matrix</groupId>
    <artifactId>gdmatrix</artifactId>
    <version>3.0</version>
  </parent>

  <groupId>org.matrix</groupId>
  <artifactId>gdmatrix-common</artifactId>
  <version>3.0</version>
  <packaging>jar</packaging>
  <description>GDMatrix common library providing utility classes and those that are common to multiple submodules</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <!-- GDMatrix -->
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>gdmatrix-stubs</artifactId>
      <version>${project.version}</version>
    </dependency>
        
    <!-- Commons libraries -->
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.6</version>
    </dependency>    
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>3.2.2</version>
    </dependency>    
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.11</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>commons-net</groupId>
      <artifactId>commons-net</artifactId>
      <version>3.9.0</version>
      <type>jar</type>
    </dependency>   
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2</version>
      <exclusions>
        <exclusion>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <!-- JAX-WS -->
    <dependency>
      <groupId>com.sun.xml.ws</groupId>
      <artifactId>jaxws-ri</artifactId>
      <version>${jaxws-ri.version}</version>
      <type>pom</type>
    </dependency>
    
    <dependency>
      <groupId>com.sun.org.apache.xml.internal</groupId>
      <artifactId>resolver</artifactId>
      <version>20050927</version>
    </dependency>
    
    <!-- Servlet API -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>      
    
    <!-- PDF -->
    <dependency>
      <groupId>com.github.librepdf</groupId>
      <artifactId>openpdf</artifactId>
      <version>1.3.11</version>
    </dependency>
    
    <!-- SVG -->
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-bridge</artifactId>
      <version>1.17</version>
      <type>jar</type>
      <exclusions>
        <exclusion>
          <!-- Exclusion to avoid collision with rhino.js jar -->
          <groupId>org.apache.xmlgraphics</groupId>
          <artifactId>batik-js</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-codec</artifactId>
      <version>1.12</version>
    </dependency>    
        
    <!-- XML Security -->
    <dependency>
      <groupId>org.apache.santuario</groupId>
      <artifactId>xmlsec</artifactId>
      <version>2.3.0</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.security</groupId>
      <artifactId>xml-security-impl</artifactId>
      <version>1.0</version>
    </dependency>   
    
    <!-- Cryptography -->
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>1.69</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk15on</artifactId>
      <version>1.69</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcmail-jdk15on</artifactId>
      <version>1.69</version>
    </dependency>    

    <!-- Javascript -->
    <dependency>
      <groupId>org.mozilla</groupId>
      <artifactId>rhino</artifactId>
      <version>1.7R4</version>
    </dependency>
    
    <!-- JSON -->
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
    </dependency>
    
    <!-- ANT -->
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <version>1.10.12</version>
    </dependency>    
    
    <!-- Java Mail -->
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>1.6.1</version>
    </dependency>
    
    <!-- HTML parsing -->
    <dependency>
      <groupId>net.sf.jtidy</groupId>
      <artifactId>jtidy</artifactId>
      <version>r938</version>
    </dependency>
    
           
    <!-- Transient dependencies declared direct to avoid conflicts -->
    <dependency>
      <groupId>javax.xml.stream</groupId>
      <artifactId>stax-api</artifactId>
      <version>1.0-2</version>
    </dependency>
    
 
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>copy-resources</id>
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${basedir}/target/classes/org/santfeliu/matrix/</outputDirectory>
              <resources>          
                <resource>
                  <directory>${basedir}/..</directory>
                  <includes>
                    <include>
                      LICENSE.txt
                    </include>
                  </includes>
                </resource>
              </resources>              
            </configuration>            
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <archive>
            <manifestEntries>
              <implementation-version>${project.version}</implementation-version>
              <implementation-build>${buildNumber}</implementation-build>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>2.2.5</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
        <configuration>
          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
          <prefix>git</prefix>
          <dateFormat>yyyy-MM-dd HH:mm:ss Z</dateFormat>
          <dateFormatTimeZone>${user.timezone}</dateFormatTimeZone>
          <failOnNoGitDirectory>false</failOnNoGitDirectory>
          <verbose>true</verbose>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <generateGitPropertiesFilename>${basedir}/target/classes/org/santfeliu/matrix/MatrixInfo.properties</generateGitPropertiesFilename>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.helger.maven</groupId>
        <artifactId>jaxws-maven-plugin</artifactId>
        <version>2.6.2</version>
        <executions>
          <execution>
            <id>wsimport_PRONOM</id>
            <goals>
              <goal>wsimport</goal>
            </goals>
            <configuration>
              <verbose>true</verbose>
              <keep>true</keep>
              <wsdlDirectory>src/main/resources/org/santfeliu/doc/util/droid</wsdlDirectory>
              <wsdlFiles>
                <wsdlFile>PRONOM.wsdl</wsdlFile>           
              </wsdlFiles>
            </configuration>            
          </execution>        
        </executions>
      </plugin> 
    </plugins>
  </build>
</project>



